@@ -3,9 +3,9 @@
                               portal_url portal_state/portal_url;">
 
     <link rel="stylesheet" type="text/css" href="
-            http://serverapi.arcgisonline.com/jsapi/arcgis/2.7/js/esri/dijit/css/Popup.css" />
+            http://serverapi.arcgisonline.com/jsapi/arcgis/2.8/js/esri/dijit/css/Popup.css" />
     <link rel="stylesheet" type="text/css"
-            href="http://serverapi.arcgisonline.com/jsapi/arcgis/2.7/js/dojo/dijit/themes/claro/claro.css" />
+            href="http://serverapi.arcgisonline.com/jsapi/arcgis/2.8/js/dojo/dijit/themes/claro/claro.css" />
 
     <div id="eeaEsriMap" class="claro" style="display:none;">
         <img id="eeaEsriMapLoadingImg"
